# CG2021-HW2

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/shader/: gouraud.frag  gouraud.vert  phong.frag  phong.vert  shadow.vert
include/: filesystem.h  graphics.h  utils.h
include/buffer/: buffer.h
include/camera/: camera.h  quat_camera.h
include/light/: directionallight.h  light.h  pointlight.h  spotlight.h
include/shader/: program.h  shader.h
include/shape/: cube.h  plane.h  shape.h  sphere.h
include/texture/: cubemap.h  shadow.h  texture.h  texture2d.h
script/: homework.patch  pack.ps1  pack.sh  release.sh
src/: CMakeLists.txt  context_manager.cpp  main.cpp
src/buffer/: buffer.cpp  vertexarray.cpp
src/camera/: quat_camera.cpp
src/light/: directionallight.cpp  pointlight.cpp  spotlight.cpp
src/shader/: program.cpp  shader.cpp
src/shape/: cube.cpp  plane.cpp  sphere.cpp
src/texture/: cubemap.cpp  shadow.cpp  texture.cpp  texture2d.cpp
vs2019/HW2/: HW2.vcxproj  HW2.vcxproj.filters
vs2019/glfw/: glfw.vcxproj
